# yais

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  test_yais.py  yais.py
.github/workflows/: push.yml
fixtures/: 296375.html
