[tool.poetry]
name = "yais"
version = "0.2.7"
description = "Yet Another Image Scraper"
authors = ["Wu Haotian <whtsky@gmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/whtsky/yais"


[tool.poetry.dependencies]
python = "^3.7"
imagesize = "^1.2.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
appdirs = "^1.4.4"
cloudscraper = "^1.2.58"

[tool.poetry.dev-dependencies]
black = "24.3.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
mypy = "^0.740"
responses = "^0.20.0"

[tool.poetry.scripts]
yais = "yais:cli"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
